clang/test/BSC/Negative/Others/control_flow_graph/backward_goto_1/backward_goto_1.cbs
// RUN: %clang_cc1 -verify %s

int rand();

void func(int *_Owned argA, int *_Owned argB) {
  int *_Owned a;
  int *_Owned b;
label1:
  if (rand()) {
    a = argA;
    goto label1; // expected-error {{invalid code structure, jumping back to previous labels is not allowed}}
  }
}